[package]
name = "hyper-ws-listener"
version = "0.2.0"
authors = [
    "Fisher Darling <fdarlingco@gmail.com>",
    "Aiden McClelland <me@drbonez.dev>",
]
edition = "2018"
description = "Easily build a websocket connection from a hyper request handler"
license = "MIT"

# [[bin]]
# name = "test"
# path = "./src/test.rs"


[dependencies]
env_logger = "0.10"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
anyhow = "1.0"
sha-1 = "0.10"
base64 = "0.21"
log = "0.4"
futures = "0.3"

[dev-dependencies]
once_cell = "1.18"
rand = "0.8"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
